# IntroPerfEng

./: README.md
GoeHPCoffee/: Makefile  ref.bib  template.tex
GoeHPCoffee/assets/: 01nxn.rs  01rayon.rs  02rayon.rs  beamerConfig.sty  beamerthemeDECICE.sty  beamerthemeGWDG.sty  beamerthemeHPS.sty  beamerthemeKISSKI.sty  beamerthemeSCIENCE.sty  eq.rs  less_heap_allocation.rs  userop.rs
Presentation/assets/: 02nxn.rs  beamerthemeGoettingen.sty  cargo.toml  less_derefs.rs
Presentation/presentation/: .gitignore  Makefile  ref.bib  template.tex
fastmatmul/: Cargo.toml
fastmatmul/benches/: my_benchmark.rs
fastmatmul/src/: lib.rs
ndim_iai/: Cargo.toml
ndim_iai/benches/: my_benchmark.rs
report/: LICENSE  LICENSE_MIT  Makefile  abbreviations.tex  abstract.tex  appendix.tex  calc.py  content.tex  main.tex  outline.md  ref.bib  titlepage.tex
report/assets/: 03rayon.rs  array.rs  call_by_ref.rs  first_impl.rs  iai.txt  variadic_optimized.rs  variadic_unoptimized.rs
static_size/benches/: my_benchmark.rs
static_size/criterion/Static Size/report/: index.html
static_size/criterion/report/: index.html
variadic_optimized/: Cargo.toml
variadic_optimized/benches/: my_benchmark.rs
variadic_optimized/criterion/Dynamic Size/report/: index.html
variadic_optimized/criterion/report/: index.html
variadic_size/: Cargo.toml
variadic_size/benches/: my_benchmark.rs
variadic_unoptimized/benches/: my_benchmark.rs
variadic_unoptimized/criterion/Dynamic Size/report/: index.html
variadic_unoptimized/criterion/report/: index.html
(+53 files in other folders)
