[package]
name = "ndim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.bench]
#opt-level = 0
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
iai = "0.1"

[[bench]]
name = "my_benchmark"
harness = false
